positional_derive/tests/ui/path-attributes.stderr
error: wrong field configuration

         = help: there should only be name = value couple inside the field configuration

 --> tests/ui/path-attributes.rs:5:7
  |
5 |     #[field]
  |       ^^^^^
